# aiida-core-i18n

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  autobuild_test.sh  conf.py  conf.py.tmpl  environment.yml  generate_symlinks.py  pyproject.toml  requirements_for_rtd.txt  transifex.yml  update_req_for_rtd.py  update_source.sh
.github/: demo-404.po  dependabot.yml
.github/scripts/: translate.py
.github/workflows/: auto-translate.yml  bookkeeping.yml  ci-i18n-with-apicall.yml  ci-i18n.yml  ci-update-pot.yml  push-translate.yml
.tx/: config
_build/locale/: backup.pot  concepts.pot  datatypes.pot  developer_guide.pot  examples.pot  get_started.pot  import_export.pot  index.pot  install.pot  querying.pot  restapi.pot  scheduler.pot  setup.pot  tutorial.pot  verdi.pot  working.pot  working_with_aiida.pot
aiida-core/: setup.json
aiida-core/requirements/: requirements-py-3.7.txt  requirements-py-3.8.txt  requirements-py-3.9.txt
docs/.tx/: config
docs/de/: Makefile  __init__.py
docs/source/: conf.py
docs/zh_CN/: .wci.yml
locale_sources/: 404.pot  external_redirects.pot  howto.pot  index.pot  installation.pot  internals.pot  intro.pot  reference.pot  topics.pot  tutorials.pot
requirements/: requirements-py-3.5.txt  requirements-py-3.6.txt  requirements-py-3.7.txt  requirements-py-3.8.txt
source/: .gitignore  conf.py  index.rst
src/aiida_core_i18n/: __init__.py  __main__.py  bookkeeping.py  deepl_api.py  post_process.py  protection.py
tests/: test_cli.py  test_translate.py
tests/statics/: origin_text.txt
tests/test_translate/: test_po_translate.txt  test_po_translate.yml  test_po_translate_default.txt  test_po_translate_max_chars_100_.txt  (+5 more)
(+1378 files in other folders)
